--- a/src/components/SwitchDark/index.module.less
+++ b/src/components/SwitchDark/index.module.less
@@ -1,5 +1,9 @@
 .switch-dark {
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
   transition: all 0.3s;
   .switch-svg {
     font-size: 20px;
