--- a/src/views/Home/index.less
+++ b/src/views/Home/index.less
@@ -3,14 +3,84 @@
   width: 100%;
   height: 100%;
   padding: 20px;
+  background-color: #deeaf5;
   .result {
     width: 100%;
-    height: 181px;
+    height: 180px;
     background: #deeaf5;
     border-radius: 15px;
     box-shadow: inset 6px 6px 20px 0 #bcccdf, inset -6px -6px 20px 0 #fff;
   }
   .content {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 100%;
+    height: calc(100% - 200px);
     margin-top: 20px;
+    .item,
+    .item-blue {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: calc(25% - 10px); /* 子项宽度占据父容器的 25% 减去间距 */
+      height: 70px;
+      margin-bottom: 20px; /* 底部间距 */
+      font-size: 26px;
+      font-weight: 500;
+      color: #95abc4;
+      background: #deeaf5;
+      border: none;
+      border-radius: 18px;
+      box-shadow: 6px 6px 12px 2px rgb(176 202 234 / 80%), -6px -6px 12px 2px rgb(255 255 255 / 90%);
+
+      /* 乘除号样式 */
+      .division {
+        font-size: 40px;
+      }
+    }
+    .item-blue {
+      font-size: 26px;
+      font-weight: 500;
+      color: #fff;
+      background: linear-gradient(137.79deg, #76aeff 9.416%, #609cff 91.364%);
+      box-shadow: 6px 6px 12px 2px rgb(164 194 232 / 80%), -6px -6px 12px 2px rgb(255 255 255 / 74%);
+    }
+    .item:active {
+      box-shadow: inset 6px 6px 12px 2px rgb(176 202 234 / 80%),
+        inset -6px -6px 12px 2px rgb(255 255 255 / 90%);
+    }
+    .item-blue:active {
+      box-shadow: inset 6px 6px 12px 2px rgb(164 194 232 / 80%),
+        inset -6px -6px 12px 2px rgb(255 255 255 / 74%);
+    }
+  }
+}
+
+/* 自定义暗黑模式样式 */
+html.dark {
+  .home {
+    background-color: #31363c;
+  }
+  .result {
+    background: #31363c;
+    box-shadow: inset 6px 6px 20px 0 #23252a, inset -6px -6px 20px 0 #434c56;
+  }
+  .content {
+    .item {
+      background: linear-gradient(146.17deg, #31363c 12.045%, #2e3339 96.398%);
+      box-shadow: 6px 6px 12px 2px rgb(32 35 39 / 85%), -6px -6px 12px 2px rgb(67 75 83 / 66%);
+    }
+    .item-blue {
+      background: linear-gradient(146.31deg, #3a7dda 13.993%, #2060b4 93.456%);
+      box-shadow: 6px 6px 12px 2px #202327, -6px -6px 12px 2px rgb(67 75 83 / 80%);
+    }
+    .item:active {
+      box-shadow: inset 6px 6px 12px 2px rgb(32 35 39 / 85%),
+        inset -6px -6px 12px 2px rgb(67 75 83 / 66%);
+    }
+    .item-blue:active {
+      box-shadow: inset 6px 6px 12px 2px #202327, inset -6px -6px 12px 2px rgb(67 75 83 / 80%);
+    }
   }
 }
