--- a/src/views/Home/index.less
+++ b/src/views/Home/index.less
@@ -5,11 +5,21 @@
   padding: 20px;
   background-color: #deeaf5;
   .result {
+    position: relative;
     width: 100%;
     height: 180px;
+    font-size: 46px;
+    font-weight: 400;
+    color: #839bb8;
+    text-align: right;
     background: #deeaf5;
     border-radius: 15px;
     box-shadow: inset 6px 6px 20px 0 #bcccdf, inset -6px -6px 20px 0 #fff;
+    span {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
   }
   .content {
     display: flex;
