fix: 优化数字靠边问题

--- a/src/views/Home/index.less
+++ b/src/views/Home/index.less
@@ -17,7 +17,7 @@
     box-shadow: inset 6px 6px 20px 0 #bcccdf, inset -6px -6px 20px 0 #fff;
     span {
       position: absolute;
-      right: 0;
+      right: 10px;
       bottom: 0;
     }
   }
